History of feedfeeder
=====================

1.0rc4 (unreleased)
-------------------

- DateTime.SyntaxError is thrown with some very common US 
  Daylight Saving zones, such as EDT. We now wrap the DateTime parsing
  of feeds, to try to recognise those zones before politely giving up, using 
  maurits' fix, below.
  [russf]
  
- Catch DateTime.SyntaxError when parsing the updated and published
  dates of an entry and continue with the next entry.
  Fixes http://plone.org/products/feedfeeder/issues/18
  [maurits]

- Avoid swallowing too much exceptions when applying our GenericSetup
  profile.
  Fixes http://plone.org/products/feedfeeder/issues/19
  [maurits]

1.0rc3 (2008-10-04)
-------------------

- Moved profile definition from python to GenericSetup.  Profile is
  now not 'profile-feedfeeder:default' but
  'profile-Products.feedfeeder:default'.  [maurits]

- In the Extensions/ dir: removed Install.py and renamed AppInstall.py
  to install.py.  [maurits]

- Made feed item updated date available for Collections/Smart Folders.
  [maurits]

- Extensions/AppInstall.py: first try installing our own profile in
  the Plone 3 way and when that fails try the Plone 2.5 way.
  [maurits]

- Removed own feedparser.py.  Instead added an install_requires
  dependency on FeedParser in setup.py.  [maurits]

- Moved fix for feeds starting with 'feed:' instead of 'http:' from
  feedparser.py to utilities.py, so we use an unchanged feedparser.py
  again.  [maurits]


1.0 rc 2 (2008-07-23)
---------------------

- Re-release of rc1: rc1 was missing all .txt files, making install impossible
  as setup.py reads version.txt. [reinout]


1.0 rc 1 (2008-07-15)
---------------------

- Accept entries without a title, which is allowed in rss.
  See http://cyber.law.harvard.edu/rss/rss.html#hrelementsOfLtitemgt
  [maurits]


1.0 beta 4 (2008-05-20)
-----------------------

- Eggification: you can now install it as the Products.feedfeeder
  egg.  [maurits]


1.0 beta 3 (2008-05-13)