@@ -129,6 +129,8 @@ Make sure the content all matches up.
   1
   >>> test_doc.enclosures.values()[0].size()
   1000
+  >>> test_doc.feed_tags
+  [u'example']
   
 Lets check out the document's feed item metadata.
 
@@ -159,6 +161,8 @@ Get our item that talks about the thesis defence of Reinout.
   >>> thesis = container.items['f065f774e8c28bf9f33221f290c4ca6a']
   >>> thesis.title
   u'Thesis defence: 15 January 2007 15:00'
+  >>> thesis.feed_tags
+  []
 
 Now someone could have added an enclosure that is actually just a link.  We append that link with an "a href" to the text of the item.
 
