@@ -11,6 +11,7 @@
   <updated>2006-07-21T12:00:00Z</updated>
   <summary>This is a sample summary</summary>
   <author><name>Miriam Mobach</name></author>
+  <category>example</category>
  </entry>
  <entry>
   <title>PR-Europa Nieuws, 21 juli</title>
